<resources>
    <string name="app_name">AndroidRealEstateApp</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_LogOut">Log Out</string>
    <!--Strings for activity_add_house_listing added by Chris Clarke-->
    <string name="item_floor">Enter number of floors</string>
    <string name="item_school">Enter school district</string>
    <string name="item_fireplace">Fireplace</string>
    <string name="item_basement">Basement</string>
    <string name="item_pool">Pool</string>
    <string name="item_streetMain">House on main street?</string>
    <string name="item_beachfront">House is a beachfront?</string>
    <string name="item_houseType">What is the house type?</string>
    <string name="item_sqfeet">How many Sq feet?</string>
    <string name="item_lotSize">How big is the lot?</string>
    <string name="item_yearBuilt">What year was house built?</string>
    <string name="item_heating">What type of heating system?</string>
    <string name="item_cooling">Does house have built in AC?</string>
    <string name="item_addAptment">Does house have a rentable space?</string>
    <string name="item_cancel_button">Cancel</string>
    <string name="item_next_button">Next</string>
    <string name="item_finish_button">Finish</string>
    <string name="optional_features">Optional features to list:</string>
    <!--~~~~~~~~~~~~~~~~Added for first page of add_house~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="zipcode">ZipCode:</string>
    <string name="state">State:</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="city">City:</string>
    <string name="enter_street_name">Enter Street Name</string>
    <string name="street_name">Street Name:</string>
    <string name="picture_of_house">Picture Of House</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="price">Price:</string>
    <string name="enter_price_amount">Enter Price Amount</string>
    <string name="bathrooms">Bathrooms:</string>
    <string name="bedrooms">Bedrooms:</string>
    <string name="garages">Garages:</string>
    <string name="floors">Floors:</string>
    <string name="sale_rent">Sale/Rent:</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="ftSquare">Sq feet:</string>
    <string name="lotSize">Lot size:</string>
    <string name="yearbuilt">Year built:</string>
    <string name="heating">Heating System:</string>
    <string name="enter_SqFeet">Enter how many Sq feet</string>
    <string name="enter_lotSize">Enter lot size</string>
    <string name="enter_yearBuilt">Enter the year it was built</string>
    <string name="distribution">Distribution System:</string>
    <string name="additional">Additional Info:</string>
    <string name="back">Back</string>
    <!--~~~~~~~~~~~~~~~~String array for spinner~~~~~~~~~~~~~~~~~~~~~~-->
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="numbersDecimal">
        <item>0</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>AK</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="RentSale">
        <item>Renting</item>
        <item>Selling</item>
    </string-array>
    <string-array name="FilterRentedSold">
        <item>Both</item>
        <item>Rented</item>
        <item>Sold</item>
    </string-array>
    <string-array name="Heating">
        <item>N/A</item>
        <item>Furnace</item>
        <item>Boiler</item>
        <item>Heat Pump</item>
        <item>Active Solar Heating</item>
        <item>Electrical Heating</item>
    </string-array>
    <string-array name="Distribution">
        <item>N/A</item>
        <item>Forced Air System (Central)</item>
        <item>Steam Radiant</item>
    </string-array>
    <string-array name="FilterBathroom">
        <item>0+</item>
        <item>1+</item>
        <item>1.5+</item>
        <item>2+</item>
        <item>3+</item>
        <item>4+</item>
    </string-array>
    <string-array name="FilterBedroom">
        <item>0+</item>
        <item>1+</item>
        <item>2+</item>
        <item>3+</item>
        <item>4+</item>
        <item>5+</item>
        <item>6+</item>
    </string-array>
    <string-array name="FilterNumber">
        <item>0+</item>
        <item>1+</item>
        <item>2+</item>
        <item>3+</item>
    </string-array>
    <string-array name="FilterRentSale">
        <item>Both</item>
        <item>Rent</item>
        <item>Buy</item>
    </string-array>

    <!--~~~~~~~~~~~~~~~~Strings for ViewHouse~~~~~~~~~~~~~~~~~~~~~~-->
    <string name="FactFig">Facts and Figures</string>
    <string name="year">Year Built</string>
    <string name="garage">Number of Garages</string>
    <string name="Lot">Lot</string>
    <string name="Addfeature">Additional Features</string>
    <string name="Air">Air Condition</string>
    <string name="Heat">Heating</string>
    <string name="Basement">Basement</string>
    <string name="Fireplace">Fireplace</string>
    <string name="DistSystem">Distribution System</string>
    <string name="pool">Pool</string>
    <string name="Beach">Beach House</string>
    <string name="mainSt">On Main Street</string>
    <string name="rentspace">Rent Space</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_Profile">Profile</string>
    <string name="Size">SqFt</string>
</resources>
