<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.FragmentsController.ViewHouse"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/infoPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ Price"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/QuickInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="# Bed|# Bath|# Floor"
            android:textSize="15sp"
            android:textColor="@color/superLightBlack"/>

    </LinearLayout>

    <TextView
        android:id="@+id/AddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Address"
        android:textSize="15sp"
        android:textColor="@color/superLightBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SaleRentText"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="   House for Rent/Sale"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/circle"
            android:drawableStart="@drawable/circle"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/appColor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FactFig"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/YearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NULL"
                android:textSize="12sp"
                android:textColor="@color/superLightBlack"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garage"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/GargeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NULL"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/superLightBlack"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Size"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/Size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NULL"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/superLightBlack"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lot"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/LotText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NULL"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/superLightBlack"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Addfeature"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Air"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/pool"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/AirText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>

                <TextView
                    android:id="@+id/PoolText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Heat"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Beach"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/HeatText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>

                <TextView
                    android:id="@+id/BeachText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Basement"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/mainSt"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/BaseText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>

                <TextView
                    android:id="@+id/MainText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Fireplace"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/rentspace"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/FireText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>

                <TextView
                    android:id="@+id/RentText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/DistSystem"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">


                <TextView
                    android:id="@+id/DistText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="NULL"
                    android:textSize="12sp"
                    android:textColor="@color/superLightBlack"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>